--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weather_widget",
   "version": "1.0.0",
-  "description": "Displays information on current weather, temperature, and sunset time. Data refreshes every 15 minutes",
+  "description": "Vancouver Weather",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
